open graph update

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гимназия №6 г. Минска</title>
 
-    <meta property="og:title" content="Гимназия №6 г. Минска — Высокие стандарты и патриотическое воспитание">
+    <meta property="og:title" content="Гимназия №6 г. Минска">
     <meta property="og:description" content="Официальный сайт ГУО «Гимназия №6 г. Минска». Узнайте о нашем военно-патриотическом клубе «Гранит», музее «Вооруженные Силы РБ» и образовательных программах.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ url_for('home', _external=True) }}">
