--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Официальный сайт ГУО «Гимназия №6 г. Минска». Узнайте о нашем военно-патриотическом клубе «Гранит», музее «Вооруженные Силы РБ» и образовательных программах.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ url_for('home', _external=True) }}">
-    <meta property="og:image" content="{{ url_for('static', filename='logo_gymn.jpg', _external=True) }}">
+    <meta property="og:image" content="{{ url_for('static', filename='logo_gymn.png', _external=True) }}">
     <meta property="og:site_name" content="ГУО «Гимназия №6 г. Минска»">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
